
syntax = "proto3";

package ccshareprotos;

import "protos/txaddr.proto";
import "google/protobuf/timestamp.proto";

//user can register a public key only if it has own some pais 
message RegContract {

	message Member{
		protos.TxAddr     addr = 1;
		int32    weight = 2;
	}

	protos.TxAddr   delegator = 4;
	repeated Member contractBody = 5;
}

message QueryContract {
	protos.TxAddr contractAddr = 1;
	protos.TxAddr memberAddr = 2;
}

message RedeemContract {
	protos.TxAddr  contract = 1;
	bytes	amount  = 2;
	repeated protos.TxAddr  redeems  = 5;
}

message RedeemResponse {
	repeated bytes nonces = 1;
}

message Contract {
	bytes     totalRedeem  = 3;

	message MemberStatus{
		int32    weight = 2;
		bytes     totalRedeem = 3;	
		protos.TxAddr    memberID = 5;	
	}

	repeated MemberStatus status = 5;
	google.protobuf.Timestamp contractTs = 6;
	google.protobuf.Timestamp frozenTo = 8;
	int64     totalWeight = 9;
	bool      isFrozen = 10;

}